--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,10 +3,17 @@
       package="org.matt1.http"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+        <activity android:name=".HttpServiceGui"
+                  android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 </manifest> 
