--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,6 @@
 
     </application>
 
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.VIBRATE" />
 </manifest> 
