Cleaned up some stuff

--- a/jar/AndroidHTTPServerJar/default.properties
+++ b/jar/AndroidHTTPServerJar/default.properties
@@ -7,7 +7,4 @@
 # "build.properties", and override values to adapt the script to your
 # project structure.
 
-android.library=false
-android.library.reference.1=../jar/AndroidHTTPServerJar/
-# Project target.
-target=android-8
+android.library=true
