--- a/gui/.classpath
+++ b/gui/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/AndroidHTTPServerJar"/>
+	<classpathentry kind="src" path="AndroidHTTPServerJar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
