--- a/gui/.project
+++ b/gui/.project
@@ -30,4 +30,11 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>AndroidHTTPServerJar</name>
+			<type>2</type>
+			<locationURI>_android_AndroidHTTPServerJar/src</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
