--- a/gui/default.properties
+++ b/gui/default.properties
@@ -8,6 +8,6 @@
 # project structure.
 
 android.library=false
-android.library.reference.1=../jar/AndroidHTTPServerJar/
+android.library.reference.1=../library/
 # Project target.
 target=android-8
