--- a/gui/.project
+++ b/gui/.project
@@ -32,6 +32,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>AndroidHTTPServer</name>
+			<type>2</type>
+			<locationURI>_android_AndroidHTTPServer/src</locationURI>
+		</link>
+		<link>
 			<name>AndroidHTTPServerJar</name>
 			<type>2</type>
 			<locationURI>_android_AndroidHTTPServerJar/src</locationURI>
