--- a/gui/.classpath
+++ b/gui/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="AndroidHTTPServer"/>
+	<classpathentry kind="src" path="AndroidHTTPServer_src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
