--- a/gui/.project
+++ b/gui/.project
@@ -36,5 +36,10 @@
 			<type>2</type>
 			<locationURI>_android_AndroidHTTPServer/src</locationURI>
 		</link>
+		<link>
+			<name>AndroidHTTPServer_src</name>
+			<type>2</type>
+			<locationURI>_android_AndroidHTTPServer_5ea30d7a/src</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
